# printer_pipeline

./: CMakeLists.txt  README.md
include/fakeprinter/: fake_printer.hpp  file_utils.hpp  html.hpp  json.hpp  layer_data.hpp  summary.hpp
output/printname3/: summary.html  summary.json
output/printname3/layer_100/: info.txt
output/printname3/layer_102/: info.txt
output/printname3/layer_103/: info.txt
output/printname3/layer_104/: info.txt
output/printname3/layer_105/: info.txt
output/printname3/layer_107/: info.txt
output/printname3/layer_109/: info.txt
output/printname3/layer_11/: info.txt
output/printname3/layer_110/: info.txt
output/printname3/layer_111/: info.txt
output/printname3/layer_112/: info.txt
output/printname3/layer_114/: info.txt
output/printname3/layer_116/: info.txt
output/printname3/layer_117/: info.txt
output/printname3/layer_118/: info.txt
output/printname3/layer_119/: info.txt
output/printname3/layer_121/: info.txt
output/printname3/layer_122/: info.txt
output/printname3/layer_123/: info.txt
output/printname3/layer_126/: info.txt
output/printname3/layer_127/: info.txt
output/printname3/layer_128/: info.txt
output/printname3/layer_132/: info.txt
output/printname3/layer_133/: info.txt
output/printname3/layer_134/: info.txt
output/printname3/layer_135/: info.txt
output/printname3/layer_136/: info.txt
output/printname4/: summary.html  summary.json
output/printname5/: summary.html  summary.json
src/: fake_printer.cpp  file_utils.cpp  html.cpp  json.cpp  main.cpp  summary.cpp
(+268 files in other folders)
